# cpp_template_hpp

./: .gitignore  CMakeLists.txt
hpp_template/: CMakeLists.txt
hpp_template/src/: template.hpp
test/: CMakeLists.txt  test.cpp
